# llama3.1_Train_benchmark

./: .gitignore  README.md  analyze_profile.py  install_pytorch_rocm.sh  main.py  profile_training.py  pyproject.toml  run_rocprof.sh  run_training.sh  run_training_optimized.sh  train_llama_from_scratch.py  train_optimized.py
configs/: llama_70b.yaml  llama_8b.yaml
custom_kernels/: __init__.py  fused_cross_entropy.py  fused_rmsnorm.py  fused_rope.py  test_kernels.py
